# tech-doc-rag-bot

./: project.toml
.devcontainer/: devcontainer.json
chroma_db/c185f638-0ce9-4267-b894-fa2d9a4c8652/: index_metadata.pickle
control-cabinet-rag/: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
control-cabinet-rag/.devcontainer/: Dockerfile  devcontainer.json
control-cabinet-rag/app/: main.py
control-cabinet-rag/app/api/routes/: ask_router.py  health_router.py
control-cabinet-rag/app/core/: config.py  logging.py
control-cabinet-rag/app/graphs/: rag_graph.py
control-cabinet-rag/app/models/: schemas.py
control-cabinet-rag/app/rag/: ingest.py  ingest_pipline.py  models.py  rag_services.py  retrievers.py  splitters.py  vectorstore.py
control-cabinet-rag/app/rag/chains/: qa_chain.py  rerank_chain.py  rewrite_chain.py
control-cabinet-rag/app/rag/evaluation/: golden_set.jsonl  run_eval.py
control-cabinet-rag/chroma_db/: chroma.sqlite3
control-cabinet-rag/control_cabinet_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
control-cabinet-rag/data/processed/: chunks.jsonl
